--- a/App10/App10/App10.csproj
+++ b/App10/App10/App10.csproj
@@ -42,5 +42,8 @@
     <EmbeddedResource Update="TicTacToePage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\TestPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
